# foolish_coder

./: .gitignore  DatePickerTest.cpp  FeeCalculatorTest.cpp  Makefile  README.md
bank/: FeeCalculator.cpp  FeeCalculatorTest.cpp
bank/antlr/grammar/: CPP14Lexer.py  CPP14Parser.py  CPP14ParserListener.py
bank/antlr/grammar/.antlr/: CPP14Lexer.java
scripts/: merge.py
src/: __main__.py  file_reader.py  test.cpp
src/error_analyzer/: error_analyzer.py  error_handler.py  file_reader.py
src/generator/: source_code_generator.py
src/parser/: CPP14Parser.py  CPP14ParserListener.py  MyCPP14ParserListener.py  SourceCPP14ParserListener.py  TestCaseCPP14ParserListener.py  demo.py  parse_controller.py  parser_method.py  target.cpp
src/structure/: cond_expression.py  cpp_class.py  file.py  function.py  if_statement.py  variable.py
target_project/: CMakeLists.txt
target_project/results/: 20221127132216.txt
target_project/test/: FeeCalculatorTest.cpp  FoolishCoderTest.cpp  UnExistTest.cpp
